# DsTOFanalysis

./: CMakeLists.txt  DsTOFConventions.h  LinkDef.h  README.md  RawDsTofCoincidence.cxx  RawDsTofCoincidence.h  RawDsTofHeader.cxx  RawDsTofHeader.h  RawTofMini.cxx  RawTofMini.h  makeDebugTree.cxx  makeHVplots.cxx  makeHitMap.cxx  makeNiceTree.cxx  makeQuickTofPlot.cxx  makeSpillDB.cxx
files/: BZH01Values.txt
macros/: ThreeBlockMcVesselTest.C  UsefulFunctions.C  absFluxS3.C  absFluxS4.C  angEffS4.C  angularDist.C  angularDistS3.C  angularDistS3_newSample.C  angularDistS4.C  angularDistS4_newSample.C  barCoins.C  barEffSmearing.C  beamTree.C  bkgSub.C  block4Times.C  calculateDataMCTotals.C  correctionFactors.C  dataS4Cosmics.C  datasetInfo.C  deadtime.C  deadtimeCorrection.C  deadtimeNoRain.C  deadtimeTimestamp.C  distancesAndErrors.C  fitGaussToCosmics.C  getScintillatorValues.C  hitMatch.C  intProtons.C  makeMcPaperPlots.C  makeMiniTree.C  mcAcrylicComp.C  mcCutComp.C  mcGeomComp.C  mcToData.C  mergeFiles.C  momCalc.C  overRun.C  overlapCalc.C  overlapCalcLines.C  proPiFrac.C  (+12 more)
scripts/: processDsTOF.sh  processOneRun.sh  templateHtml.sh  ustofDeltaT.C
